Update model
