# server/overlay/swagger_server/controllers/entity_controller.py
@@ -1,6 +1,7 @@
 import connexion
 from swagger_server.models.entities import Entities
 from swagger_server.models.entity import Entity
+from swagger_server.models.source_entity import SourceEntity
 from datetime import date, datetime
 from typing import List, Dict
 from six import iteritems
@@ -13,7 +14,7 @@ import sys
 def download_entities_by_property(propName, propValue):
     """
     fetches entities by property value
-    
+
     :param propName: name of property to search
     :type propName: str
     :param propValue: matching value of property to search
@@ -33,7 +34,7 @@ def download_entities_by_property(propName, propValue):
 def download_entity(entityId):
     """
     fetches an entity
-    
+
     :param entityId: ID of entity to fetch
     :type entityId: str
 
@@ -45,4 +46,20 @@ def download_entity(entityId):
     result = ed.fetch_entity_by_id(entityId, None)
 
     return result
+
+def update_entity(entityId, entity):
+    """
+    updates an entity
+
+    :param entityId: ID of entity to update
+    :type entityId: str
+    :param entity:
+    :type entity: dict | bytes
+
+    :rtype: SourceEntity
+    """
+    print("update_entity", file=sys.stderr)
+    if connexion.request.is_json:
+      entity = Entity.from_dict(connexion.request.get_json())
+    return 'do some magic!'
 
